// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Github should handle GITHUB_GET_REPOS_FAILURE 1`] = `
Object {
  "repos": Object {
    "data": Object {},
    "message": "Something went wrong",
    "query": "",
    "state": "error",
  },
}
`;

exports[`Github should handle GITHUB_GET_REPOS_REQUEST 1`] = `
Object {
  "repos": Object {
    "data": Object {
      "undefined": Array [],
    },
    "message": "",
    "query": undefined,
    "state": "running",
  },
}
`;

exports[`Github should handle GITHUB_GET_REPOS_SUCCESS 1`] = `
Object {
  "repos": Object {
    "data": Object {
      "": Array [],
    },
    "message": "",
    "query": "",
    "state": "loaded",
  },
}
`;

exports[`Github should return the initial state 1`] = `
Object {
  "repos": Object {
    "data": Object {},
    "message": "",
    "query": "",
    "state": "idle",
  },
}
`;
